# meshterm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
meshterm/: __init__.py  app.py  connection.py  formatting.py  state.py  storage.py
meshterm/views/: __init__.py  chat.py  detail.py  log.py  nodes.py  settings.py
meshterm/widgets/: __init__.py  channel_manager.py  chat_input.py  chat_log.py  config_panels.py  dialogs.py  dm_input.py  header_bar.py  help_modal.py  log_panel.py  message_action_menu.py  message_details_modal.py  node_table.py  reaction_picker.py  reconnecting_modal.py  stats_bar.py  status_bar.py
scripts/: screenshots.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_message_flow.py
tests/ui/: __init__.py  test_chat_wrapping.py  test_log_search.py  test_navigation.py
tests/unit/: __init__.py  test_formatting.py  test_log_search.py  test_protocol.py  test_state.py  test_storage.py
